--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
-
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
 <body>
     <header>
         <a href="#" class="logo">Arsh Accessories</a>
         <ul class="navlist">
             <li><a href="#home">Home</a></li>
-            <li><a href="#products">Products</a></li>
+            <li><a href="#featured">Products</a></li>
             <li><a href="#review">Reviews</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -32,7 +32,7 @@
 
     <section class="home" id="home">
         <div class="home-text">
-            <h1>Arsh Accessories<br><span><i>Accessories, gifts and home decor</span></i></h1>
+            <h1>Arsh<br>Accessories<br><span><i>Accessories, gifts and home decor</span></i></h1>
             <p>✓Customisation in every article is available</p>
             <p>✓Complimentary packaging</p>
             <p>✓Customisation in occasional packaging available</p>
@@ -152,9 +152,108 @@
                 </div>
             </div>
         </section>
-        
-        <section>
-<!--review-->
+<!--testimonial-->        
+        <section class="testimonial-area">
+            <div class="container">
+                <div class="sec-title">
+                    <h2>Our Testimonials</h2>
+                    <p>What clients say about us?</p>
+                </div>
+                <div class="testimonial-content owl-carousel">
+                    <div class="single-testimonial">
+                        <p>“I am so happy with the service and the product. I will definitely be ordering again!”</p>
+                        <div class="client-info">
+                            <div class="client-pic">
+                                <a href="#">
+                                    <img src="../img/review_1.png">
+                                </a>
+                            </div>
+                            <div class="client-details">
+                                <h6>Ronals Row</h6>
+                                <span>Designer, LLC team</span>
+                            </div>
+                        </div>
+                    </div><div class="single-testimonial">
+                        <p>“I am so happy with the service and the product. I will definitely be ordering again!”</p>
+                        <div class="client-info">
+                            <div class="client-pic">
+                                <a href="#">
+                                    <img src="../img/review_1.png">
+                                </a>
+                            </div>
+                            <div class="client-details">
+                                <h6>Ronals Row</h6>
+                                <span>Designer, LLC team</span>
+                            </div>
+                        </div>
+                    </div><div class="single-testimonial">
+                        <p>“I am so happy with the service and the product. I will definitely be ordering again!”</p>
+                        <div class="client-info">
+                            <div class="client-pic">
+                                <a href="#">
+                                    <img src="../img/review_1.png">
+                                </a>
+                            </div>
+                            <div class="client-details">
+                                <h6>Ronals Row</h6>
+                                <span>Designer, LLC team</span>
+                            </div>
+                        </div>
+                    </div><div class="single-testimonial">
+                        <p>“I am so happy with the service and the product. I will definitely be ordering again!”</p>
+                        <div class="client-info">
+                            <div class="client-pic">
+                                <a href="#">
+                                    <img src="../img/review_1.png">
+                                </a>
+                            </div>
+                            <div class="client-details">
+                                <h6>Ronals Row</h6>
+                                <span>Designer, LLC team</span>
+                            </div>
+                        </div>
+                    </div><div class="single-testimonial">
+                        <p>“I am so happy with the service and the product. I will definitely be ordering again!”</p>
+                        <div class="client-info">
+                            <div class="client-pic">
+                                <a href="#">
+                                    <img src="../img/review_1.png">
+                                </a>
+                            </div>
+                            <div class="client-details">
+                                <h6>Ronals Row</h6>
+                                <span>Designer, LLC team</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+            <script type="text/javascript">
+                $(document).ready(function(){
+                    $('.testimonial-content').owlCarousel({
+                        loop:true,
+                        nav:false,
+                        dots:true,
+                        margin:50,
+                        autoplay:true,
+                        autoplayTimeout:3000,
+                        smartSpeed:800,
+                        responsive:{
+                            0:{
+                                items:1
+                            },
+                            600:{
+                                items:1
+                            },
+                            1000:{
+                                items:2
+                            }
+                        }
+                    })
+                });
+            </script>
         </section>
         <section class="contact" id="contact">
             <div class="main-contact">
@@ -193,7 +292,7 @@
            <p>© 2022 Arsh Accessories. All rights reserved</p>
     </div>
          <!--scroll top-->
-    <a href="#" class="top"><i class='bx bx-up-arrow-alt' ></i></a>
+    <a href="#home" class="top" style="transition: transform 0.3s;" onmouseover="this.style.transform = 'translateY(-10px)';" onmouseout="this.style.transform = 'translateY(0)';"><i class='bx bx-up-arrow-alt' ></i></a>
 
     <script src="https://unpkg.com/scrollreveal"></script>
 
