--- a/index.html
+++ b/index.html
@@ -161,11 +161,24 @@
                 </div>
                 <div class="testimonial-content owl-carousel">
                     <div class="single-testimonial">
-                        <p>“I am so happy with the service and the product. I will definitely be ordering again!”</p>
+                        <p>“Absolutely loving this pendant! The quality of both the pendant and the packaging exceeded my expectations. Overall, really pleased with my purchase."”</p>
                         <div class="client-info">
                             <div class="client-pic">
                                 <a href="#">
-                                    <img src="../img/review_1.png">
+                                    <img src="../img/girl1.png">
+                                </a>
+                            </div>
+                            <div class="client-details">
+                                <h6>Ronals Row</h6>
+                                <span>Designer, LLC team</span>
+                            </div>
+                        </div>
+                    </div><div class="single-testimonial">
+                        <p>"I gave this beautiful keyring to my sister along with a lovely note. Thank you, Simran, for such a beautiful accessory, the pretty packaging, and the thoughtful note."</p>
+                        <div class="client-info">
+                            <div class="client-pic">
+                                <a href="#">
+                                    <img src="../img/boy1.png">
                                 </a>
                             </div>
                             <div class="client-details">
@@ -178,7 +191,7 @@
                         <div class="client-info">
                             <div class="client-pic">
                                 <a href="#">
-                                    <img src="../img/review_1.png">
+                                    <img src="../img/girl3.png">
                                 </a>
                             </div>
                             <div class="client-details">
@@ -191,7 +204,7 @@
                         <div class="client-info">
                             <div class="client-pic">
                                 <a href="#">
-                                    <img src="../img/review_1.png">
+                                    <img src="../img/boy2.png">
                                 </a>
                             </div>
                             <div class="client-details">
@@ -204,20 +217,7 @@
                         <div class="client-info">
                             <div class="client-pic">
                                 <a href="#">
-                                    <img src="../img/review_1.png">
-                                </a>
-                            </div>
-                            <div class="client-details">
-                                <h6>Ronals Row</h6>
-                                <span>Designer, LLC team</span>
-                            </div>
-                        </div>
-                    </div><div class="single-testimonial">
-                        <p>“I am so happy with the service and the product. I will definitely be ordering again!”</p>
-                        <div class="client-info">
-                            <div class="client-pic">
-                                <a href="#">
-                                    <img src="../img/review_1.png">
+                                    <img src="../img/girl4.png">
                                 </a>
                             </div>
                             <div class="client-details">
