--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@
                                 </a>
                             </div>
                             <div class="client-details">
-                                <h6>Ronals Row</h6>
+                                <h6>Naayra</h6>
                                 <span>Designer, LLC team</span>
                             </div>
                         </div>
                     </div><div class="single-testimonial">
-                        <p>“I am so happy with the service and the product. I will definitely be ordering again!”</p>
+                        <p>“The variety of colors in the scrunchies is absolutely beautiful! I'm truly impressed by their quality and will definitely be purchasing more for myself on my birthday. Keep up the great work and continue to grow!”</p>
                         <div class="client-info">
                             <div class="client-pic">
                                 <a href="#">
@@ -195,12 +195,12 @@
                                 </a>
                             </div>
                             <div class="client-details">
-                                <h6>Ronals Row</h6>
-                                <span>Designer, LLC team</span>
+                                <h6>Srishti</h6>
+                                <span>Bought scrunchies!</span>
                             </div>
                         </div>
                     </div><div class="single-testimonial">
-                        <p>“I am so happy with the service and the product. I will definitely be ordering again!”</p>
+                        <p>“My girlfriend absolutely adored the resin photo frame, especially the delicate flower details on the packaging. It made the whole experience even more special for her.”</p>
                         <div class="client-info">
                             <div class="client-pic">
                                 <a href="#">
@@ -208,7 +208,7 @@
                                 </a>
                             </div>
                             <div class="client-details">
-                                <h6>Ronals Row</h6>
+                                <h6>*Boyfriend*</h6>
                                 <span>Designer, LLC team</span>
                             </div>
                         </div>
