--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="#featured">Products</a></li>
             <li><a href="#review">Reviews</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="https://www.instagram.com/arsh__accessoriesandgifts?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><i class='bx bxl-instagram' ></i></a></li>
         </ul>
 
         <div class="header-icons">
@@ -33,12 +34,12 @@
     <section class="home" id="home">
         <div class="home-text">
             <h1>Arsh<br>Accessories<br><span><i>Accessories, gifts and home decor</span></i></h1>
-            <p>✓Customisation in every article is available</p>
-            <p>✓Complimentary packaging</p>
-            <p>✓Customisation in occasional packaging available</p>
-            <p>✓Delivery charges will apply </p>
-            <p>✓1+ year</p>
-            <a href="#" class="btn">Explore</a>
+            <p><i class='bx bx-check-double'></i>  Customisation in every article</p>
+            <p><i class='bx bx-check-double'></i>  Complimentary packaging</p>
+            <p><i class='bx bx-check-double'></i>  Customisation in occasional packaging</p>
+            <p><i class='bx bx-check-double'></i>  Over a Year of Craftsmanship</p>
+            <p><i class='bx bx-check-double'></i>  Delivery charges will apply </p>
+            <a href="#featured" class="btn">Explore</a>
         </div>
         </section>
         <!--featured-->
@@ -48,60 +49,66 @@
             </div>
             <div class="featured-content">  
                 <div class="row">
-                    <img src="../img/fea1.png">
+                    <img src="../img/jwel1.jpg">
                     <div class="fea-text">
-                        <h5>jwel</h5>
-                        <p>10 items</p>
+                        <h5>Ocean Necklace</h5>
+                        <p>Set of one</p>
+                        <span>₹299</span>
                     </div>
                     <div class="arrow">
                         <a href="#"><i class='bx bx-right-arrow-alt'></i></a>
                 </div>
             </div>
             <div class="row">
-                <img src="../img/fea1.png">
+                <img src="../img/bear.jpg">
                 <div class="fea-text">
-                    <h5>jwel</h5>
-                    <p>10 items</p>
+                    <h5>Mini teddy bear pendent</h5>
+                    <p>Set of two</p>
+                    <span>₹249</span>
                 </div>
                 <div class="arrow">
                     <a href="#"><i class='bx bx-right-arrow-alt'></i></a>
                 </div>
             </div>
             <div class="row">
-                <img src="../img/fea1.png">
+                <img src="../img/jwel2.jpg">
                 <div class="fea-text">
-                    <h5>jwel</h5>
-                    <p>10 items</p>
+                    <h5>Floral Beads necklace</h5>
+                    <p>Set of one</p>
+                    <span>₹299</span>
                 </div>
                 <div class="arrow">
                     <a href="#"><i class='bx bx-right-arrow-alt'></i></a>
                 </div>
             </div>
             <div class="row">
-                <img src="../img/fea1.png">
+                <img src="../img/jwel3.jpg">
                 <div class="fea-text">
-                    <h5>jwel</h5>
-                    <p>10 items</p>
+                    <h5>Pearls & Beads Jewelry</h5>
+                    <p>Set</p>
+                    <span>₹499</span>
                 </div>
                 <div class="arrow">
                     <a href="#"><i class='bx bx-right-arrow-alt'></i></a>
                 </div>
             </div>
             <div class="row">
-                <img src="../img/fea1.png">
+                <img src="../img/bracelet .jpg">
                 <div class="fea-text">
-                    <h5>jwel</h5>
-                    <p>10 items</p>
+                    <h5>Butterfly bracelets</h5>
+                    <p>Set of two</p>
+                    <span>₹149</span>
                 </div>
                 <div class="arrow">
                     <a href="#"><i class='bx bx-right-arrow-alt'></i></a>
                 </div>
             </div>
                 <div class="row">
-                    <img src="../img/fea1.png">
+                    <img src="../img/bracelet2.jpg">
                     <div class="fea-text">
-                        <h5>jwel</h5>
-                        <p>10 items</p>
+                        <h5>Shades of pink bracelet</h5>
+                        <p>Set of one</p>
+                        <span>₹129</span>
                     </div>
                     <div class="arrow">
                         <a href="#"><i class='bx bx-right-arrow-alt'></i></a>
@@ -115,7 +122,7 @@
             <div class="cta-text">
                 <h6> ON SALE </h6>
                 <h4> 20% OFF <br> NEW</h4>
-                <a href="#" class="btn">Shop Now</a>
+                <a href="#new" class="btn">Shop Now</a>
             </div> 
         </section>
         <!--new-->
@@ -125,7 +132,7 @@
             </div>
             <div class="new-content">
                 <div class="box">
-                    <img src="../img/fea1.png">
+                    <img src="../img/key1.jpg">
                     <h5> loren opsum dizgi</h5> 
                     <h6>$69</h6>
                     <div class = "sale">
@@ -134,7 +141,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="../img/fea1.png">
+                    <img src="../img/key2.jpg">
                     <h5> loren opsum dizgi</h5> 
                     <h6>$69</h6>
                     <div class = "sale">
@@ -143,7 +150,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="../img/fea1.png">
+                    <img src="../img/key3.jpg">
                     <h5> loren opsum dizgi</h5> 
                     <h6>$69</h6>
                     <div class = "sale">
@@ -153,7 +160,7 @@
             </div>
         </section>
 <!--testimonial-->        
-        <section class="testimonial-area">
+        <section class="testimonial-area" id="review">
             <div class="container">
                 <div class="sec-title">
                     <h2>Our Testimonials</h2>
@@ -263,13 +270,13 @@
                     <a href="#"><i class='bx bxs-phone' ></i></a>
                     <a href="#"><i class='bx bxl-instagram-alt'></i></a>
                     <a href="#"><i class='bx bxl-whatsapp' ></i></a>
-                    <a href="#"><i class='bx bxl-gmail' ></i></a>
+                    <a href="mailto:arshaccessories.business@gmail.com"><i class='bx bxl-gmail' ></i></a>
                 </div>
             </div>
             <div class="main-contact">
                 <h3>Explore</h3>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#products">Products</a></li>
+                <li><a href="#featured">Products</a></li>
                 <li><a href="#review">Review</a></li>
                 <li><a href="#contact">Contact</a></li>
             </div>
@@ -282,7 +289,7 @@
 
             <div class="main-contact">
                 <h3>Shopping</h3>
-                <li><a href="#">Home Store</a></li>
+                <li><a href="#home">Home Store</a></li>
                 <li><a href="#">New Frames</a></li>
                 <li><a href="#">Accessories</a></li>
                 <li><a href="#">New</a></li>
@@ -290,7 +297,20 @@
         </section>
     <div class="last-text">
            <p>© 2022 Arsh Accessories. All rights reserved</p>
+<!--modal-->
     </div>
+    <div id="productModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <img id="modalImage" src="" alt="Product Image">
+          <div class="modal-description">
+            <h5 id="modalTitle">Product Title</h5>
+            <p id="modalItems">10 items</p>
+            <p id="modalPrice">$69</p>
+            <button id="buyButton">Buy Now</button>
+          </div>
+        </div>
+      </div>
          <!--scroll top-->
     <a href="#home" class="top" style="transition: transform 0.3s;" onmouseover="this.style.transform = 'translateY(-10px)';" onmouseout="this.style.transform = 'translateY(0)';"><i class='bx bx-up-arrow-alt' ></i></a>
 
