--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 </div>
                 <div class="testimonial-content owl-carousel">
                     <div class="single-testimonial">
-                        <p>“Absolutely loving this pendant! The quality of both the pendant and the packaging exceeded my expectations. Overall, really pleased with my purchase."”</p>
+                        <p>“Absolutely loving this pendant! The quality of both the pendant and the packaging exceeded my expectations. Overall, really pleased with my purchase.”</p>
                         <div class="client-info">
                             <div class="client-pic">
                                 <a href="#">
@@ -276,9 +276,9 @@
                 <h3>Arsh Accessories</h3>
                 <h5>Connect With Us</h5>
                 <div class="icons">
-                    <a href="#"><i class='bx bxs-phone' ></i></a>
+                    <a href="tel://+916261383275"><i class='bx bxs-phone' ></i></a>
                     <a href="https://www.instagram.com/arsh__accessoriesandgifts?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
-                    <a href="#"><i class='bx bxl-whatsapp' ></i></a>
+                    <a href="https://wa.me/message/E74UOOXW4WLQL1"><i class='bx bxl-whatsapp' ></i></a>
                     <a href="mailto:arshaccessories.business@gmail.com"><i class='bx bxl-gmail' ></i></a>
                 </div>
             </div>
@@ -299,9 +299,8 @@
             <div class="main-contact">
                 <h3>Shopping</h3>
                 <li><a href="#home">Home Store</a></li>
-                <li><a href="#">New Frames</a></li>
-                <li><a href="#">Accessories</a></li>
-                <li><a href="#">New</a></li>
+                <li><a href="#featured">Accessories</a></li>
+                <li><a href="#new">New</a></li>
             </div>
         </section>
     <div class="last-text">
@@ -316,13 +315,14 @@
                 </div>
                 <div class="modal-description">
                     <h5 id="modalTitle">Product Title</h5>
-                    <p id="modalItems">10 items</p>
-                    <p id="modalDesc">Modal Description</p>
+                    <p id="modalItems">1 item</p>
+                    <p id="modalDesc">Price</p>
                     <p id="modalPrice">$69</p>
                     <button id="buyButton">Buy Now</button>
+                    <h4 class="contact-heading">Contact Us to Buy</h4>
                     <div class="contact-icons">
-                        <a href="#" class="contact-icon"><i class='bx bxl-whatsapp'></i></a>
-                        <a href="#" class="contact-icon"><i class='bx bxs-phone'></i></a>
+                        <a href="" id="whatsappLink" class="contact-icon"><i class='bx bxl-whatsapp'></i></a>
+                        <a href="tel://+916261383275" class="contact-icon"><i class='bx bxs-phone'></i></a>
                     </div>
                 </div>
             </div>
@@ -344,3 +344,4 @@
 
         <script src="js/script.js"></script>
 </html>
+<!--made with love 💌-->
