--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             </div>
                             <div class="client-details">
                                 <h6>Ronals Row</h6>
-                                <span>Designer, LLC team</span>
+                                <span></span>
                             </div>
                         </div>
                     </div><div class="single-testimonial">
@@ -199,7 +199,7 @@
                             </div>
                             <div class="client-details">
                                 <h6>Naayra</h6>
-                                <span>Designer, LLC team</span>
+                                <span></span>
                             </div>
                         </div>
                     </div><div class="single-testimonial">
@@ -225,7 +225,7 @@
                             </div>
                             <div class="client-details">
                                 <h6>*Boyfriend*</h6>
-                                <span>Designer, LLC team</span>
+                                <span></span>
                             </div>
                         </div>
                     </div><div class="single-testimonial">
@@ -238,7 +238,7 @@
                             </div>
                             <div class="client-details">
                                 <h6>Ronals Row</h6>
-                                <span>Designer, LLC team</span>
+                                <span></span>
                             </div>
                         </div>
                     </div>
@@ -338,16 +338,35 @@
             <div class="modal-body">
                 <div id="pricingContent" class="service-content">
                     <h3>Pricing</h3>
-                    <p>Detailed pricing plans available. Contact us for bulk orders and discounts.</p>
-                </div>
+                    <br>
+                    <p>Our pricing can vary, and we often have special offers available. For the most updated prices and special offers, please contact us directly.</p>
+                    <br>
+                    <p>We offer various payment methods for your convenience.</p>
+                    <br>
+                    <p><strong>Please note that Cash on Delivery (COD) is not applicable.</strong></p>
+                </div>                
                 <div id="shippingContent" class="service-content">
                     <h3>Shipping</h3>
-                    <p>We offer domestic and international shipping. Free shipping on orders over $50.</p>
+                    <br>
+                    <p>We offer shipping across all regions of India. Shipping costs are calculated based on your location and will be added during checkout.</p>
+                    <br>
+                    <p><strong>We don't offer Cash on Delivery</strong></p>
+                    <br>
+                    <p><strong>Delivery Time:</strong> Please allow [5 to 10 days] for your package to arrive.</p>
+                    <br>
+                    <p><strong>Tracking:</strong> Once shipped, you'll receive an message with tracking details to monitor your package's progress.</p>
+                    <br>
+                    <p>For any questions, contact us at <a href="https://wa.me/916261383275?text=Need%20more%20details%20about%20shipping">WhatsApp</a>.</p>
                 </div>
                 <div id="giftsContent" class="service-content">
                     <h3>Gifts</h3>
-                    <p>Customizable gift options available for special occasions. Gift wrapping services included.</p>
-                </div>
+                    <br>
+                    <p>Explore our customizable gift options perfect for any special occasion.</p>
+                    <br>
+                    <p>We take pride in our exquisite packaging to make your gift truly stand out. From elegant boxes to eco-friendly wraps, we've got you covered!</p>
+                    <br>
+                    <p>For a closer look at our packaging styles, check out our <a href="https://www.instagram.com/reel/C5n4IipSzre/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener noreferrer">Instagram</a></p><p><br> Or you can connect with us on  <a href="https://wa.me/916261383275?text=Hello%21%20I%20have%20a%20special%20packaging%20request.%20Can%20you%20help%3F" target="_blank" rel="noopener noreferrer">WhatsApp</a></p>
+                </div>                
             </div>
         </div>
     </div>
