--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                 </a>
                             </div>
                             <div class="client-details">
-                                <h6>Ronals Row</h6>
+                                <h6>Aaisha</h6>
                                 <span></span>
                             </div>
                         </div>
@@ -237,7 +237,7 @@
                                 </a>
                             </div>
                             <div class="client-details">
-                                <h6>Ronals Row</h6>
+                                <h6>Shivam</h6>
                                 <span></span>
                             </div>
                         </div>
